<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="menu_start_mission">Start Mission</string>
    <string name="menu_stop_mission">Stop Mission</string>
    <string name="app_name">Flight Planner for DJI</string>
    <string name="settings">Settings</string>
    <string name="label_general">General</string>
    <string name="label_other">Others</string>
    <string name="menu_drone_setup">Drone Setup</string>
    <string name="app_settings">App Settings</string>
    <string name="flight_data">Vehicle Data</string>
    <string name="editor">Mission Planner</string>
    <string name="upload_mission">Upload mission</string>
    <string name="download_mission">Download mission</string>
    <string name="sdk_registration_message">SDK Registration Failed. Please check the bundle ID and your network</string>
    <string name="logged_in">Login status</string>
    <string name="log_out">Log Out</string>
    <string name="json_data">JSON_Data</string>
    <string name="com_dji_android_PREF_FILE_KEY">Pref file key</string>
    <string name="client_id">Client_ID</string>
    <string name="go">Go</string>
    <string name="aeroview_sync_successful">AeroView sync completed</string>
    <string name="aeroview_sync_error">Failed to fetch data: check internet connection</string>
    <string name="user_auth_token">User auth token for aeroview</string>
    <string name="boundary_data">Boundary data of the user</string>
    <string name="croptypes">Crop types from Aeroview</string>
    <string name="farms">Client farms from Aeroview</string>
    <string name="active_farms">Farms selected by client to fly</string>
    <string name="service_provider_farms">List of service provider farm ids</string>
    <string name="screen_cal">Calibration</string>
    <string name="screen_checklist">Checklist</string>
    <string name="screen_parameters">Parameters</string>
    <string name="switch_farm">Manage farms</string>
    <string name="all_client_ids">All client ids</string>
    <string name="pref_connection_type">Telemetry Connection Type</string>
    <string name="pref_connection_type_summary">Which link to use to connect to the drone</string>
    <string name="pref_maps_title">Maps</string>
    <string name="pref_maps_providers_summary">Which map provider to use.</string>
    <string name="pref_maps_providers_title">Maps Providers</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_ui_language_english">English as UI Language</string>
    <string name="pref_ui_language_english_summary">Use English language (instead of system language). Requires app restart.</string>
    <string name="pref_keep_screen_bright">Keep Screen On</string>
    <string name="pref_keep_screen_bright_summary">Check to keep the screen on and bright (affect battery life)</string>
    <string name="pref_lock_screen_orientation">Lock Screen Orientation</string>
    <string name="pref_lock_screen_orientation_summary">Locks screen to the orientation which is present when connecting</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_map_type">Map Type</string>
    <string name="pref_map_type_summary">Which type of map to use</string>
    <string name="pref_tile_provider_title">Map Tile Provider</string>
    <string name="pref_tile_provider_google">Google</string>
    <string name="pref_tile_provider_mapbox">Mapbox</string>
    <string name="pref_tile_provider_arcgis">ArcGIS</string>
    <string name="pref_tile_provider_summary">Which map tile provider to use</string>
    <string name="pref_enable_tts">Enable Speech output</string>
    <string name="pref_enable_tts_summary">Audible messages for important events</string>
    <string name="pref_request_max_volume">Set Volume To Max On Start</string>
    <string name="pref_connection">Connection Preferences</string>
    <string name="pref_connection_subtitle">USB, TCP and UDP settings</string>
    <string name="pref_usb">USB Connection Settings</string>
    <string name="pref_baud_type">Telemetry link speed</string>
    <string name="pref_baud_type_summary">Baud Rate of the USB Telemetry Link</string>
    <string name="pref_server">TCP Connection Settings</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_server_udp">UDP Connection Settings</string>
    <string name="pref_udp_server_port">UDP Server Port</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="search_hint">Search boundary names</string>
    <string name="signUpMessageWithLink">Don\'t have an account? <a href="https://aeroview.aerobotics.co.za/sign-up?src=app">Sign up</a></string>
    <string name="signUpMessage">Don\'t have an account? Sign up</string>
    <string name="user_autopan_long_press">Long press to activate user auto panning.</string>
    <string name="drone_autopan_long_press">Long press to activate drone auto panning.</string>
    <string name="drone_no_location">No drone location available</string>
    <string name="nav_to_one_farm">You have selected multiple farms. Please only select one farm to navigate to.</string>
    <string name="confirm_nav_to_farm">This will open your maps application to navigate to the selected farm. Continue?</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="button_setup_calibrate">Calibrate</string>
    <string name="button_setup_cancel">Cancel</string>
    <string name="button_setup_send">Send</string>
    <string name="button_setup_next">Next</string>
    <string name="button_setup_done">Done</string>
    <string name="select_file_to_open">Select file to open:</string>
    <string name="no_files">No files</string>
    <string name="error_when_opening_file">Error when opening file</string>
    <string name="status_file_opened">File opened</string>
    <string name="distance_between_lines">Lateral</string>
    <string name="footprint">Footprint</string>
    <string name="ground_resolution">GSD</string>
    <string name="distance_between_pictures">Longitudinal</string>
    <string name="area">Area</string>
    <string name="camera_">Camera:</string>
    <string name="hatch_angle">Hatch Angle:</string>
    <string name="flight_altitude">Flight Altitude:</string>
    <string name="overlap">Overlap:</string>
    <string name="sidelap">Sidelap:</string>
    <string name="speed">Aircraft Speed:</string>
    <string name="mission_length">Grid Length</string>
    <string name="pictures">Pictures</string>
    <string name="number_of_strips">Number of Strips</string>
    <string name="flight_time">Flight Time</string>
    <string name="draw_the_survey_region">Draw the survey region</string>
    <string name="mission_waypoints">Mission waypoints</string>
    <string name="last_waypoint_index">Last waypoint index</string>
    <string name="last_drone_location">Last drone location</string>
    <string name="survey_index">Survey index</string>
    <string name="mission_aborted">Previous mission aborted</string>
    <string name="mode_acro">Acro allows a pilot to control rate of rotation directly.</string>
    <string name="mode_althold">Alt Hold automatically controls throttle and maintains altitude. Does not require GPS.</string>
    <string name="mode_auto">Auto follows the scripted mission stored on the vehicle.</string>
    <string name="mode_circle">Circle rotates the vehicle around a point of interest. The vehicle will always point toward the center. Requires GPS lock.</string>
    <string name="mode_drift">Drift combines roll and yaw to produce a more natural and intuitive flight. Requires GPS lock.</string>
    <string name="mode_guided">Guided enables position control from a ground station. Requires GPS lock.</string>
    <string name="mode_land">Land at the current location. Requires GPS lock.</string>
    <string name="mode_loiter">Loiter allows the pilot to fly completely through GPS.</string>
    <string name="mode_rtl">RTL rises to the minimum altitude, returns to the home location and lands. Requires GPS lock.</string>
    <string name="mode_sport">Sport allows a pilot to control rate of rotation directly with the addition of self-leveling.</string>
    <string name="mode_stabilize">Stabilize levels the vehicle in flight.</string>
    <string name="mode_poshold">PosHold allows position hold (GPS) with direct response to pilot input.</string>
    <string name="mode_follow">The vehicle follows the user based on the device GPS location.</string>
    <string name="waypointType_Survey">Survey</string>
    <string name="waypointType_Waypoint">Waypoint</string>
    <string name="waypointType_SplineWaypoint">Spline Waypoint</string>
    <string name="waypointType_TakeOff">Takeoff</string>
    <string name="waypointType_RTL">Return To Launch</string>
    <string name="setup_mag_title">Compass Calibration</string>
    <string name="altitude_label">Altitude</string>
    <string name="roi_height_label">ROI Height</string>
    <string name="mission_control_home">Home</string>
    <string name="mission_control_arm">Arm</string>
    <string name="mission_control_disarm">Disarm</string>
    <string name="mission_control_land">Land</string>
    <string name="mission_control_takeoff">Takeoff</string>
    <string name="mission_control_pause">Pause</string>
    <string name="mission_control_auto">Auto</string>
    <string name="mission_control_follow">Follow</string>
    <string name="mission_control_dronie">Dronie</string>
    <string name="pref_bluetooth">Bluetooth Connection Settings</string>
    <string name="pref_forget_bluetooth_device_address">Forget default device</string>
    <string name="pref_forget_bluetooth_device_address_confirm">Are you sure?</string>
    <string name="pref_bluetooth_forget">Forget</string>
    <string name="pref_title_google_maps">Google Maps Preferences</string>
    <string name="pref_title_google_tile_provider">Google Tile Provider</string>
    <string name="radius_label">Radius</string>
    <string name="pref_enable_udp_server_title">Enable UDP server ping</string>
    <string name="pref_udp_server_ping_summary">Enable to allow the app to periodically ping the udp server.</string>
    <string name="pref_udp_ping_receiver_ip_title">UDP ping receiver ip</string>
    <string name="pref_udp_ping_receiver_port_title">UDP ping receiver port</string>
    <string name="pref_title_mapbox_tile_provider">Mapbox Tile Provider</string>
    <string name="label_ekf">ekf</string>
    <string name="label_velocity_var_abbrev">vel</string>
    <string name="label_horizontal_position_var_abbrev">h.pos</string>
    <string name="label_vertical_position_var_abbrev">v.pos</string>
    <string name="label_mag_var_abbrev">mag</string>
    <string name="label_terrain_var_abbrev">ter</string>
    <string name="label_attitude_estimate">Attitude estimate</string>
    <string name="label_flags">Flags</string>
    <string name="label_constant_position_mode">Constant position mode</string>
    <string name="label_velocity">Velocity</string>
    <string name="label_velocity_estimate">Vertical estimate</string>
    <string name="label_horizontal_estimate">Horizontal estimate</string>
    <string name="label_horizontal_position">Horizontal Position</string>
    <string name="label_relative_estimate">Relative estimate</string>
    <string name="label_absolute_estimate">Absolute estimate</string>
    <string name="label_above_ground_estimate">Above ground estimate</string>
    <string name="label_vertical_position">Vertical Position</string>
    <string name="label_absolute_predicted_estimate">Absolute predicted estimate</string>
    <string name="label_relative_predicted_estimate">Relative predicted estimate</string>
</resources>