<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/flight_screens"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_editor"
            android:icon="@drawable/ic_menu_editor_grey600_24dp"
            android:title="@string/editor" />
        <item
            android:id="@+id/navigation_farms"
            android:icon="@drawable/ic_home_grey_700_24dp"
            android:title="@string/switch_farm" />

    </group>

    <group
        android:id="@+id/preference_screens"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_checklist"
            android:icon="@drawable/ic_menu_checklist_grey600_24dp"
            android:title="@string/screen_checklist" />

        <item
            android:id="@+id/navigation_compass_calibration"
            android:icon="@drawable/ic_action_compass"
            android:title="@string/setup_mag_title"
            android:visible="false"
            android:enabled="false"/>

    </group>
    <item
        android:id="@+id/navigation_telem_switch"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_visibility_off_black_48dp"
        android:title="Hide Telemetry"
        android:visible="true"
        app:actionLayout="@layout/switch_item" />

</menu>
