<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/mc_disconnected_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/flight_action_buttons_container_bg"
        android:orientation="horizontal"
        android:visibility="visible" >

        <Button
            android:id="@+id/mc_joystickBtn"
            style="@style/flightControlButton.Row"
            android:drawableTop="@drawable/ic_control"
            android:text="@string/mission_control_control" />

        <Button
            android:id="@+id/mc_connectBtn"
            style="@style/flightControlButton.Row"
            android:drawableTop="@drawable/ic_connect"
            android:text="@string/menu_connect" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mc_disarmed_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/flight_action_buttons_container_bg"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/mc_armBtn"
            style="@style/flightControlButton.Row"
            android:drawableTop="@drawable/ic_arm"
            android:text="@string/mission_control_arm" />

        <Button
            android:id="@+id/mc_dronieBtn"
            style="@style/flightControlButton.Row"
            android:drawableTop="@drawable/ic_dronie"
            android:text="@string/mission_control_dronie" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mc_armed_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/flight_action_buttons_container_bg"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/mc_disarmBtn"
            style="@style/flightControlButton.Row"
            android:drawableTop="@drawable/ic_arm"
            android:text="@string/mission_control_disarm" />

        <Button
            android:id="@+id/mc_takeoff"
            style="@style/flightControlButton.Row"
            android:drawableTop="@drawable/ic_takeoff"
            android:text="@string/mission_control_takeoff" />

        <Button
            android:id="@+id/mc_TakeoffInAutoBtn"
            style="@style/flightControlButton.Row"
            android:drawableTop="@drawable/ic_auto"
            android:text="@string/mission_control_auto" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mc_in_flight_buttons"
        android:layout_width="@dimen/flight_actions_container_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/flight_action_buttons_container_bg"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/mc_homeBtn"
            style="@style/flightControlButton.Row"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/mission_control_home" />

        <Button
            android:id="@+id/mc_land"
            style="@style/flightControlButton.Row"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_land"
            android:text="@string/mission_control_land"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/mc_pause"
            style="@style/flightControlButton.Row"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_pause"
            android:text="@string/mission_control_pause"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/mc_autoBtn"
            style="@style/flightControlButton.Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_auto"
            android:text="@string/mission_control_auto"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/mc_follow"
            style="@style/flightControlButton.Row"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_follow"
            android:text="@string/mission_control_follow"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</FrameLayout>