<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/flyoutPanelLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ModeDetail"
        android:background="@drawable/mode_desc_rectangle"
        style="@style/ModeDetailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mode_follow"/>

    <Spinner
        android:id="@+id/follow_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <org.droidplanner.android.view.spinnerWheel.CardWheelHorizontalView
        android:id="@+id/altitude_spinner"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/missionItemDetailCard"
        android:text="@string/altitude_label"/>

    <org.droidplanner.android.view.spinnerWheel.CardWheelHorizontalView
        android:id="@+id/radius_spinner"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/missionItemDetailCard"
        android:text="@string/radius_label"/>

    <org.droidplanner.android.view.spinnerWheel.CardWheelHorizontalView
        android:id="@+id/roi_height_spinner"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/missionItemDetailCard"
        android:text="@string/roi_height_label"/>

</LinearLayout>